Logo and Website name modified

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Special Day Countdown</title>
     <link rel="stylesheet" href="CSS/index.css">
+    <link rel="icon" href="https://img.icons8.com/color/48/coming-soon.png" type="image/png"
+        sizes="80x80">
 </head>
 
 <body>
